Body wasn't reaching bottom of page on mobile. Trying to fix with position absolute

--- a/app/sass/style.scss
+++ b/app/sass/style.scss
@@ -1,18 +1,18 @@
 body {
+  background: url("https://s3-us-west-1.amazonaws.com/brunchandboozeimages/Beautiful-juice-.jpg") no-repeat center center fixed;
+  background-size: cover;
+  position: absolute; bottom:0;
   font-family: 'Cabin', sans-serif;
   margin: 0;
   padding: 0;
   color: #333333;
   height: 100%;
-  background: url("https://s3-us-west-1.amazonaws.com/brunchandboozeimages/Beautiful-juice-.jpg") no-repeat center center fixed;
-  background-size: cover;
 }
 
 
 /***************
 Landing and Search Field View
 ***************/
-
 
 h1 {
   text-align: center;
